# xqpath

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN_V1_1.md  JQ_SYNTAX_COMPARISON.md  LICENSE  Makefile  README.md  RELEASE_REPORT_V0_0_1.md  ROADMAP_V1_2.md  V1_1_PROGRESS_REPORT.md  config.yaml  rustfmt.toml  test.json  test_data.json  test_simple.rs
.github/workflows/: ci.yml  release.yml
benches/: advanced_benchmarks.rs  performance.rs
config/: README.md  validate.sh
config/examples/: default.yaml  development.yaml  performance.yaml  production.yaml
config/templates/: base.yaml  debug.yaml
docs/: README.md  benchmarks-structure.md  debug-plan-overview.md  debug-plan-v1.4.1.md  debug-plan-v1.4.3.md  implementation-timeline.md  quick-start-guide.md  test-optimization.md
docs/archive/: implementation-plan-v1.1.md
docs/archive/v1.4/: .test-config.toml  CLEANUP-SUMMARY.md  README-VERIFICATION-REPORT.md  README.md  ci-integration-summary.md  ci-status-report.md  debug-plan-overview.md  debug-plan-v1.4.2.md  debug-plan-v1.4.3.md  readme_verification.rs  test-optimization-report.md  v1.4-final-summary.md  v1.4.1-final-report.md
docs/archive/v1.4.3/: README.md  v1.4.3-final-summary.md
docs/archive/v1.4/v1.4.3/: COMPLETION_REPORT.md  FINAL_TEST_REPORT.md  README.md  demo_debugger.sh  enhanced_test_data.json  v1.4.3-final-summary.md  verify_features.rs  verify_readme_rust.rs
docs/design/: user-functions-implementation.md
docs/planning/: post-release-roadmap.md  roadmap-v1.2.md  roadmap-v1.3.md
docs/releases/: v0.0.1-release-report.md  v1.1-progress-report.md  v1.2-release-notes.md
docs/rfcs/: RFC-001-jq-syntax-compatibility.md  RFC-002-expression-system.md  RFC-003-builtin-functions.md
examples/: advanced_functions_demo.rs  api_integration.rs  api_validation.rs  array_index_debug.rs  basic_test.rs  builtin_functions_demo.rs  conditional_expressions_demo.rs  config-example.yaml  debug_simple.rs  debug_validation.rs  error_handling_debug.rs  error_handling_demo.rs  error_handling_eval_debug.rs  expression_demo.rs  field_access_debug.rs  length_debug.rs  length_function_debug.rs  performance_demo.rs  readme_api_demo.rs
scripts/: README.md  run-benchmarks.sh  test-runner.sh  verify-ci.sh  verify-debug.sh  verify.sh
src/: cli.rs  config.rs  debugger.rs  extractor.rs  lib.rs  macros.rs  updater.rs
src/debug/: benchmark.rs  logger.rs  mod.rs  profiler.rs  reporter.rs  tests.rs  tracer.rs
src/parser/: expression.rs  mod.rs  path.rs
src/parser/ast/: complexity.rs  expression.rs  mod.rs  operators.rs
src/parser/evaluation/: error.rs  evaluator.rs  mod.rs
src/parser/functions/: advanced.rs  basic.rs  mod.rs
src/parser/parsing/: mod.rs  parser.rs
src/value/: format.rs  json.rs  mod.rs  yaml.rs
tests/: advanced_functions.rs  builtin_functions.rs  conditional_expressions.rs  config_debug_features.rs  enhanced_debugger.rs  error_handling.rs  integration.rs  readme_verification.rs
