[package]
name = "xqpath"
version = "1.2.1"
edition = "2021"
authors = ["Thne"]
description = "A minimal jq-like path extractor and updater for structured data in Rust"
license = "Apache-2.0"
repository = "https://github.com/ThneS/xqpath"
keywords = ["json", "yaml", "path", "query", "jq"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "xqpath"
path = "src/cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
winnow = "0.5"

[features]
default = []
update = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
